--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             <h1 style="text-align: center; font-family: 'Nova Square', sans-serif;">About Me</h1>
             <p> I am Jai Darshan S, currently in my second year pursuing <b class="bold">B.Tech in Artificial Intelligence and Data Science at Chennai Institute of Technology</b>. From a young age, my fascination with the limitless possibilities of technology and data has driven me towards the dynamic realms of Artificial Intelligence and Data Science. The exploration of algorithms, machine learning models, and the power of data-driven decision-making has ignited a passion within me. <br>
               I am constantly seeking opportunities to enhance my skills in these fields, whether through engaging coursework or personal projects. My journey in AI and Data Science is not just an academic pursuit but a personal quest to contribute meaningfully to the evolving landscape of technology. I am enthusiastic about leveraging the potential of data to solve real-world problems and am committed to continuous learning to stay at the forefront of this ever-evolving field. </p>
-          </div><br><br>
+          </div>
           <div id="skills">
           <h1 style="text-align: center; font-family: 'Nova Square', sans-serif;">Skills</h1></div>
           <div id="skill">
             <div class="sk">
-              <h1 style="color: rgb(49, 196, 49);">Programming Languages</h2>
+              <h1>Programming Languages</h2>
                 <ul>
                   <li>Python</li>
                   <li>C</li>
@@ -58,7 +58,7 @@
                 </ul>
             </div>
             <div class="sk">
-              <h1 style="color: rgb(49, 196, 49);">Certifications</h1>
+              <h1>Certifications</h1>
               <ul>
                 <li><b class="bold">NPTEL:</b>Ethical Hacking</li>
                 <li><b class="bold">UDEMY:</b>Python for Machine Learning & Data Science Master Class</li>
@@ -76,7 +76,7 @@
               <img src="images/my_project.jpg" width=500px>
             </div>
             <div class="prct">
-              <h2 style="color: rgb(49, 196, 49);">Shopping website</h2>
+              <h2>Shopping website</h2>
               <p style="text-align: justify; padding-right: 40px;">Introducing my ongoing project, a dynamic shopping website dedicated to smart gadgets like smartphones and laptops. The addition of JavaScript brings interactivity to the site, enabling features like dynamic product displays, real-time user feedback, and a smooth, intuitive shopping experience. Together, these technologies harmonize to deliver a modern, user-friendly platform that not only showcases smart gadgets but also engages and delights visitors throughout their journey on the website. </p>
             </div>
             </div>
